[package]
name = "code-snip"
version = "0.1.1"
edition = "2021"
authors = ["Max Taylor"]
description = "A CLI tool to create images from code snippets."
license = "MIT"
repository = "https://github.com/max-taylor/code-snip"
keywords = ["cli", "tool", "rust", "snippet"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
image = "0.25.5"
rusttype = "0.9.3"
syntect = "5.2.0"
